k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-ingress
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway
  http:
  - match:
    - uri:
        prefix: /auth
    route:
      - destination:
          host: account-service.account-service.svc.cluster.local
          port:
            number: 80
  - match:
    - uri:
        prefix: /*
    route:
      - destination:
          host: eitan-service.eitan-service.svc.cluster.local
          port:
            number: 80
